Added renderer getter in cg-element. Added block creation in cg-inspector.

--- a/cg-element.html
+++ b/cg-element.html
@@ -56,7 +56,12 @@ methods and properties.
             /**
              * Holds a reference on the graph.
              */
-            graph: cg.Graph
+            graph: cg.Graph,
+
+            /**
+             * Holds a reference on the renderer.
+             */
+            renderer: cg.Renderer
 
         },
         _currentId: 0,
