--- a/demo/demo-wrapper.html
+++ b/demo/demo-wrapper.html
@@ -44,7 +44,7 @@
                 }
             },
             ready: function () {
-                this.$.inspector.element = this.$.element;
+                this.$.inspector.bindElement(this.$.element);
             }
         });
     </script>
