Can now add new blocks from the inspector Fixed block placement at creation

--- a/themes/dude.html
+++ b/themes/dude.html
@@ -1,5 +1,6 @@
-<link href='//fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
-<link href='//fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'>
+<link href="//fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
+<link href="//fonts.googleapis.com/css?family=Dosis" rel="stylesheet" type="text/css">
+<link href="base.html" rel="import">
 <style is="custom-style">
 
     /**
