--- a/cg-inspector.html
+++ b/cg-inspector.html
@@ -119,7 +119,6 @@ methods and properties.
             },
             behaviors: [Polymer.IronA11yKeysBehavior],
             ready: function () {
-                this._currentId = 0;
                 this._models = [];
                 this._folders = {};
                 this._currentState = "root";
@@ -156,7 +155,7 @@ methods and properties.
             _createBlock: function () {
                 if (this.$.blocks.selectItem !== null) {
                     var data = Object.create(this.$.blocks.selectItem.data);
-                    data.cgId = "gen_" + this._currentId++;
+                    data.cgId = cg.UUID.generate();
                     this.element.graph.loader.loadBlock(data);
                 }
             },
