--- a/cg-inspector.html
+++ b/cg-inspector.html
@@ -2,6 +2,7 @@
 <link rel="import" href="../iron-input/iron-input.html">
 <link rel="import" href="../magnet-hierarchy/magnet-hierarchy.html">
 <link rel="import" href="../magnet-state/magnet-state.html">
+<link rel="import" href="../paper-dialog/paper-dialog.html">
 
 <!--
 `cg-inspector` is a Polymer element which creates the inspector for codegraph. In other words, it creates the sidebar
@@ -57,6 +58,9 @@ methods and properties.
         #state :not(.active-state) {
             display: none;
         }
+        #compileResult > div {
+            width: 800px;
+        }
     </style>
     <template>
         <div class="layout vertical flex">
@@ -104,6 +108,12 @@ methods and properties.
                 </div> <!-- .box -->
             </div>
         </div>
+        <paper-dialog id="compileResult">
+            <h2>Code</h2>
+            <paper-dialog-scrollable>
+                <pre><code>{{_compiledCode}}</code></pre>
+            </paper-dialog-scrollable>
+        </paper-dialog>
     </template>
     <script>
         Polymer({
@@ -122,6 +132,7 @@ methods and properties.
                 this._models = [];
                 this._folders = {};
                 this._currentState = "root";
+                this._compiledCode = "";
                 pandora.forEach(this.models, function (value, key) {
                     if (value.cgFolder) {
                         if (this._folders[value.cgFolder] === undefined) {
@@ -165,7 +176,8 @@ methods and properties.
                 console.log(this._folder);
             },
             _compile: function () {
-                console.log(this._builder.save(this.element.graph));
+                this._compiledCode = this._builder.save(this.element.graph);
+                this.$.compileResult.open();
             }
         });
     </script>
