--- a/themes/dude.html
+++ b/themes/dude.html
@@ -1,5 +1,4 @@
-<link href="//fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
-<link href="//fonts.googleapis.com/css?family=Dosis" rel="stylesheet" type="text/css">
+<link href='http://fonts.googleapis.com/css?family=Nunito:300' rel='stylesheet' type='text/css'>
 <link href="base.html" rel="import">
 <style is="custom-style">
 
@@ -12,7 +11,7 @@
         --cg-background-color: #333333;
         --cg-title-color: hsla(0, 0%, 90%, 1);
         --cg-text-color: hsla(0, 0%, 60%, 1);
-        --cg-display-font: "Dosis", monospace;
+        --cg-display-font: "Nunito", monospace;
         --paper-input-container-focus-color: var(--cg-primary-color);
         --paper-input-container-input-color: var(--cg-text-color);
         --paper-input-container-input: {
