Added specific rendering for Value and Variable.

--- a/themes/dude.html
+++ b/themes/dude.html
@@ -91,6 +91,17 @@
         stroke-width: 8px;
     }
 
+    /**
+     * Variables
+     */
+    .cg-variable > rect, .cg-value > rect {
+        fill: var(--cg-primary-color);
+        stroke: var(--cg-primary-color);
+    }
+
+    .cg-variable > text, .cg-value > text {
+        fill: #333;
+    }
 
     /**
      * Points
