--- a/cg-inspector.html
+++ b/cg-inspector.html
@@ -61,6 +61,9 @@ methods and properties.
         #compileResult > div {
             width: 800px;
         }
+        paper-button {
+            margin: 2px 0;
+        }
     </style>
     <template>
         <div class="layout vertical flex">
@@ -77,6 +80,7 @@ methods and properties.
                     <paper-button class="primary" on-click="_compile">Compile</paper-button>
                     <paper-button class="primary" on-click="_addGroup">Add group</paper-button>
                     <paper-button class="primary" on-click="_removeSelection">Remove selection</paper-button>
+                    <paper-button class="primary" on-click="_save">Save</paper-button>
                 </div> <!-- .box -->
                 <div class="box">
                     <div class="title">Add block</div>
@@ -185,6 +189,9 @@ methods and properties.
             },
             _removeSelection: function () {
                 this.element.renderer.removeSelection();
+            },
+            _save: function () {
+                console.log(new cg.JSONSaver().save(this.element.renderer, this.element.graph));
             }
         });
     </script>
