--- a/themes/dude.html
+++ b/themes/dude.html
@@ -11,6 +11,7 @@
         --cg-background-color: #333333;
         --cg-title-color: hsla(0, 0%, 90%, 1);
         --cg-text-color: hsla(0, 0%, 60%, 1);
+        --cg-error-color: var(--paper-red-700);
         --cg-display-font: "Nunito", monospace;
         --paper-input-container-focus-color: var(--cg-primary-color);
         --paper-input-container-input-color: var(--cg-text-color);
