--- a/themes/dude.html
+++ b/themes/dude.html
@@ -12,7 +12,7 @@
         --cg-title-color: hsla(0, 0%, 90%, 1);
         --cg-text-color: hsla(0, 0%, 60%, 1);
         --cg-error-color: var(--paper-red-700);
-        --cg-display-font: "Nunito", monospace;
+        --cg-display-font: "Nunito", arial, sans-serif;
         --paper-input-container-focus-color: var(--cg-primary-color);
         --paper-input-container-input-color: var(--cg-text-color);
         --paper-input-container-input: {
